# airas-20251127-083432-taskid-a59b1a44-1fb5-4e03-a

./: pyproject.toml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-iter1-ImageNet64.yaml  proposed-iter1-ImageNet64.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
