[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "hices-experiments"
version = "0.7.0"
requires-python = ">=3.9"

[project.dependencies]
torch = "*"
torchvision = "*"
hydra-core = "^1.3.2"
omegaconf = "*"
wandb = "*"
datasets = "*"
optuna = "*"
matplotlib = "*"
seaborn = "*"
pandas = "*"
scipy = "*"
einops = "*"
diffusers = "*"
pyyaml = "*"